--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@auth0/auth0-react": "^1.4.0",
 		"@testing-library/jest-dom": "^5.11.6",
 		"@testing-library/react": "^11.2.2",
 		"@testing-library/user-event": "^12.6.0",
@@ -16,6 +17,8 @@
 		"postcss-cli": "^8.0.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-router": "^5.2.0",
+		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
 		"tailwindcss": "^1.8.11"
 	},
