--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,18 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon server.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"axios": "^0.21.1",
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
-		"mongodb": "^3.6.6"
+		"express-jwt": "^6.0.0",
+		"jwks-rsa": "^2.0.3",
+		"mongodb": "^3.6.6",
+		"nodemon": "^2.0.7"
 	}
 }
