--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"express-jwt": "^6.0.0",
 		"jwks-rsa": "^2.0.3",
 		"mongodb": "^3.6.6",
+		"mongoose": "^5.12.7",
 		"nodemon": "^2.0.7"
 	}
 }
