--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -13,6 +13,7 @@
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.6",
 		"autoprefixer": "^10.0.1",
+		"dotenv": "^8.2.0",
 		"postcss": "^8.1.1",
 		"postcss-cli": "^8.0.0",
 		"react": "^17.0.1",
