--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -14,9 +14,11 @@
 		"@types/react-router-dom": "^5.1.6",
 		"autoprefixer": "^10.0.1",
 		"dotenv": "^8.2.0",
+		"lodash": "^4.17.21",
 		"postcss": "^8.1.1",
 		"postcss-cli": "^8.0.0",
 		"react": "^17.0.1",
+		"react-datasheet": "^1.4.9",
 		"react-dom": "^17.0.1",
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
