--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
 		"jwks-rsa": "^2.0.3",
 		"mongodb": "^3.6.6",
 		"mongoose": "^5.12.7",
+		"node-fetch": "^2.6.1",
 		"nodemon": "^2.0.7"
 	}
 }
