--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -15,6 +15,7 @@
 		"autoprefixer": "^10.0.1",
 		"dotenv": "^8.2.0",
 		"lodash": "^4.17.21",
+		"node-fetch": "^2.6.1",
 		"postcss": "^8.1.1",
 		"postcss-cli": "^8.0.0",
 		"react": "^17.0.1",
