--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -19,6 +19,7 @@
 		"postcss": "^8.1.1",
 		"postcss-cli": "^8.0.0",
 		"react": "^17.0.1",
+		"react-chartjs-2": "^3.0.3",
 		"react-datasheet": "^1.4.9",
 		"react-dom": "^17.0.1",
 		"react-router": "^5.2.0",
