--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js"
+		"start": "node server.js"
 	},
 	"author": "",
 	"license": "ISC",
@@ -20,5 +20,8 @@
 		"mongoose": "^5.12.7",
 		"node-fetch": "^2.6.1",
 		"nodemon": "^2.0.7"
+	},
+	"engines": {
+		"node": "14.x"
 	}
 }
