--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -13,6 +13,7 @@
 		"@types/react-dom": "^16.9.8",
 		"@types/react-router-dom": "^5.1.6",
 		"autoprefixer": "^10.0.1",
+		"chart.js": "^3.2.1",
 		"dotenv": "^8.2.0",
 		"lodash": "^4.17.21",
 		"node-fetch": "^2.6.1",
@@ -35,7 +36,6 @@
 		"build:css": "postcss src/styles/index.css -o src/styles/tailwind.css --env production",
 		"watch:css": "postcss src/styles/index.css -o src/styles/tailwind.css"
 	},
-	"proxy": "http://localhost:5000",
 	"eslintConfig": {
 		"extends": "react-app"
 	},
@@ -57,5 +57,8 @@
 	"description": "Starting files for a tailwindCSS w/postCSS purging and react",
 	"main": "index.js",
 	"author": "Owen Duncan-Snobel",
-	"license": "ISC"
+	"license": "ISC",
+	"engines": {
+		"node": "14.x"
+	}
 }
